first panda code

--- a/first_notebook.ipynb
+++ b/first_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "first_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYyUbEqXEQnmO2z8y5nVtP",
+      "authorship_tag": "ABX9TyOTFblkg8WIfJRdQ2Iw6xeX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Raghavendarlokineni/colab-machine-learning/blob/master/first_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Raghavendarlokineni/colab-machine-learning/blob/develop/first_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -29,16 +29,16 @@
       "metadata": {
         "id": "EcOARrbV4RO5",
         "colab_type": "code",
+        "outputId": "d2d09605-ad9c-4380-f463-1a17937f9dfa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d2d09605-ad9c-4380-f463-1a17937f9dfa"
+        }
       },
       "source": [
         "print(\"hello ishaan\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,18 +54,18 @@
       "metadata": {
         "id": "nRD3KzNo4lUz",
         "colab_type": "code",
+        "outputId": "d7da53fb-36be-4e6c-d8ea-4b3e4290fef5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
-        },
-        "outputId": "d7da53fb-36be-4e6c-d8ea-4b3e4290fef5"
+        }
       },
       "source": [
         "for i in range(100):\n",
         "  if i%5 == 0:\n",
         "    print(i)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,11 +100,11 @@
       "metadata": {
         "id": "MyauPmeB51Mg",
         "colab_type": "code",
+        "outputId": "2e66a116-acb5-4fea-d9ba-dd120e7f0030",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "2e66a116-acb5-4fea-d9ba-dd120e7f0030"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -121,7 +121,7 @@
         "for i,e in enumerate(a):\n",
         "  print(\"index {} and element {}\".format(i,e))  "
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,16 +145,16 @@
       "metadata": {
         "id": "j2KG4tf48wUJ",
         "colab_type": "code",
+        "outputId": "6dead335-881f-4457-8dca-4c5a6a679929",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "6dead335-881f-4457-8dca-4c5a6a679929"
+        }
       },
       "source": [
         "ls -ltr sample_data/"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +168,117 @@
             "-rw-r--r-- 1 root root   301141 May  4 16:26 california_housing_test.csv\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6kM2IP80lVKV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "08ac606a-4189-441d-eb4a-e94ba10a10dd"
+      },
+      "source": [
+        "from __future__ import print_function\n",
+        "import pandas as pd\n",
+        "pd.__version__"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.0.3'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SK3acvbOm6O9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "35aa5d54-d230-4bee-dbb9-b8d862bba197"
+      },
+      "source": [
+        "cityNames = pd.Series([\"hyd\", \"bang\", \"Chen\"])\n",
+        "population = pd.Series([\"1.5M\", \"2.5M\", \"1.2M\"])\n",
+        "\n",
+        "pd.DataFrame({\"City Name\" : cityNames, \"Population\" : population})"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>City Name</th>\n",
+              "      <th>Population</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>hyd</td>\n",
+              "      <td>1.5M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>bang</td>\n",
+              "      <td>2.5M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Chen</td>\n",
+              "      <td>1.2M</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  City Name Population\n",
+              "0       hyd       1.5M\n",
+              "1      bang       2.5M\n",
+              "2      Chen       1.2M"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
         }
       ]
     }
