--- a/first_notebook.ipynb
+++ b/first_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "first_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTFblkg8WIfJRdQ2Iw6xeX",
+      "authorship_tag": "ABX9TyPr9jEFU7xDPhIyFQ2fZW8J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -212,15 +212,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "35aa5d54-d230-4bee-dbb9-b8d862bba197"
+        "outputId": "e124ac4f-e733-4d44-9996-c5caa6ceec8d"
       },
       "source": [
         "cityNames = pd.Series([\"hyd\", \"bang\", \"Chen\"])\n",
         "population = pd.Series([\"1.5M\", \"2.5M\", \"1.2M\"])\n",
         "\n",
-        "pd.DataFrame({\"City Name\" : cityNames, \"Population\" : population})"
+        "pd.DataFrame({\"CityName\" : cityNames, \"Population\" : population})"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,7 +244,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>City Name</th>\n",
+              "      <th>CityName</th>\n",
               "      <th>Population</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -269,16 +269,443 @@
               "</div>"
             ],
             "text/plain": [
-              "  City Name Population\n",
-              "0       hyd       1.5M\n",
-              "1      bang       2.5M\n",
-              "2      Chen       1.2M"
+              "  CityName Population\n",
+              "0      hyd       1.5M\n",
+              "1     bang       2.5M\n",
+              "2     Chen       1.2M"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "25nwJcFloFRa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "outputId": "0ea9695e-c634-462e-eef5-7482770a1a00"
+      },
+      "source": [
+        "california_housing_info = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\", sep=\",\")\n",
+        "california_housing_info.describe()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "      <td>17000.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>-119.562108</td>\n",
+              "      <td>35.625225</td>\n",
+              "      <td>28.589353</td>\n",
+              "      <td>2643.664412</td>\n",
+              "      <td>539.410824</td>\n",
+              "      <td>1429.573941</td>\n",
+              "      <td>501.221941</td>\n",
+              "      <td>3.883578</td>\n",
+              "      <td>207300.912353</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>2.005166</td>\n",
+              "      <td>2.137340</td>\n",
+              "      <td>12.586937</td>\n",
+              "      <td>2179.947071</td>\n",
+              "      <td>421.499452</td>\n",
+              "      <td>1147.852959</td>\n",
+              "      <td>384.520841</td>\n",
+              "      <td>1.908157</td>\n",
+              "      <td>115983.764387</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>-124.350000</td>\n",
+              "      <td>32.540000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.499900</td>\n",
+              "      <td>14999.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>-121.790000</td>\n",
+              "      <td>33.930000</td>\n",
+              "      <td>18.000000</td>\n",
+              "      <td>1462.000000</td>\n",
+              "      <td>297.000000</td>\n",
+              "      <td>790.000000</td>\n",
+              "      <td>282.000000</td>\n",
+              "      <td>2.566375</td>\n",
+              "      <td>119400.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>-118.490000</td>\n",
+              "      <td>34.250000</td>\n",
+              "      <td>29.000000</td>\n",
+              "      <td>2127.000000</td>\n",
+              "      <td>434.000000</td>\n",
+              "      <td>1167.000000</td>\n",
+              "      <td>409.000000</td>\n",
+              "      <td>3.544600</td>\n",
+              "      <td>180400.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>-118.000000</td>\n",
+              "      <td>37.720000</td>\n",
+              "      <td>37.000000</td>\n",
+              "      <td>3151.250000</td>\n",
+              "      <td>648.250000</td>\n",
+              "      <td>1721.000000</td>\n",
+              "      <td>605.250000</td>\n",
+              "      <td>4.767000</td>\n",
+              "      <td>265000.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>-114.310000</td>\n",
+              "      <td>41.950000</td>\n",
+              "      <td>52.000000</td>\n",
+              "      <td>37937.000000</td>\n",
+              "      <td>6445.000000</td>\n",
+              "      <td>35682.000000</td>\n",
+              "      <td>6082.000000</td>\n",
+              "      <td>15.000100</td>\n",
+              "      <td>500001.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          longitude      latitude  ...  median_income  median_house_value\n",
+              "count  17000.000000  17000.000000  ...   17000.000000        17000.000000\n",
+              "mean    -119.562108     35.625225  ...       3.883578       207300.912353\n",
+              "std        2.005166      2.137340  ...       1.908157       115983.764387\n",
+              "min     -124.350000     32.540000  ...       0.499900        14999.000000\n",
+              "25%     -121.790000     33.930000  ...       2.566375       119400.000000\n",
+              "50%     -118.490000     34.250000  ...       3.544600       180400.000000\n",
+              "75%     -118.000000     37.720000  ...       4.767000       265000.000000\n",
+              "max     -114.310000     41.950000  ...      15.000100       500001.000000\n",
+              "\n",
+              "[8 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gl7xQIqJtmai",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "46ce68db-b4e8-4320-f0ff-b6bcaf48e30f"
+      },
+      "source": [
+        "california_housing_info.head(3)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-114.31</td>\n",
+              "      <td>34.19</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>5612.0</td>\n",
+              "      <td>1283.0</td>\n",
+              "      <td>1015.0</td>\n",
+              "      <td>472.0</td>\n",
+              "      <td>1.4936</td>\n",
+              "      <td>66900.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-114.47</td>\n",
+              "      <td>34.40</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>7650.0</td>\n",
+              "      <td>1901.0</td>\n",
+              "      <td>1129.0</td>\n",
+              "      <td>463.0</td>\n",
+              "      <td>1.8200</td>\n",
+              "      <td>80100.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-114.56</td>\n",
+              "      <td>33.69</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>720.0</td>\n",
+              "      <td>174.0</td>\n",
+              "      <td>333.0</td>\n",
+              "      <td>117.0</td>\n",
+              "      <td>1.6509</td>\n",
+              "      <td>85700.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   longitude  latitude  ...  median_income  median_house_value\n",
+              "0    -114.31     34.19  ...         1.4936             66900.0\n",
+              "1    -114.47     34.40  ...         1.8200             80100.0\n",
+              "2    -114.56     33.69  ...         1.6509             85700.0\n",
+              "\n",
+              "[3 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8276Srs6t18G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "10d6cfd8-01e1-4b9e-b3e8-bcf5b9e2cd0b"
+      },
+      "source": [
+        "california_housing_info.tail(3)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>16997</th>\n",
+              "      <td>-124.30</td>\n",
+              "      <td>41.84</td>\n",
+              "      <td>17.0</td>\n",
+              "      <td>2677.0</td>\n",
+              "      <td>531.0</td>\n",
+              "      <td>1244.0</td>\n",
+              "      <td>456.0</td>\n",
+              "      <td>3.0313</td>\n",
+              "      <td>103600.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16998</th>\n",
+              "      <td>-124.30</td>\n",
+              "      <td>41.80</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>2672.0</td>\n",
+              "      <td>552.0</td>\n",
+              "      <td>1298.0</td>\n",
+              "      <td>478.0</td>\n",
+              "      <td>1.9797</td>\n",
+              "      <td>85800.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16999</th>\n",
+              "      <td>-124.35</td>\n",
+              "      <td>40.54</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>1820.0</td>\n",
+              "      <td>300.0</td>\n",
+              "      <td>806.0</td>\n",
+              "      <td>270.0</td>\n",
+              "      <td>3.0147</td>\n",
+              "      <td>94600.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       longitude  latitude  ...  median_income  median_house_value\n",
+              "16997    -124.30     41.84  ...         3.0313            103600.0\n",
+              "16998    -124.30     41.80  ...         1.9797             85800.0\n",
+              "16999    -124.35     40.54  ...         3.0147             94600.0\n",
+              "\n",
+              "[3 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h4sfo_LlvyCx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Accessing Data\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6CNeNJiPv78T",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "53d9f956-b307-4158-dca7-c936ffcab81c"
+      },
+      "source": [
+        "cities = pd.DataFrame({\"CityName\" : cityNames, \"Population\" : population})\n",
+        "print(cities[\"CityName\"])\n",
+        "print(cities[\"Population\"][0])\n",
+        "print(type(cities[\"Population\"][0:2]))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0     hyd\n",
+            "1    bang\n",
+            "2    Chen\n",
+            "Name: CityName, dtype: object\n",
+            "1.5M\n",
+            "<class 'pandas.core.series.Series'>\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
