--- a/first_notebook.ipynb
+++ b/first_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "first_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPr9jEFU7xDPhIyFQ2fZW8J",
+      "authorship_tag": "ABX9TyPUTUZRPvOfJ9POTJt2Wu2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "EcOARrbV4RO5",
         "colab_type": "code",
-        "outputId": "d2d09605-ad9c-4380-f463-1a17937f9dfa",
+        "outputId": "725c892a-f45b-4e59-d3e1-e7d9afe21789",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -38,7 +38,7 @@
       "source": [
         "print(\"hello ishaan\")"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "nRD3KzNo4lUz",
         "colab_type": "code",
-        "outputId": "d7da53fb-36be-4e6c-d8ea-4b3e4290fef5",
+        "outputId": "a88f6c3c-fedb-4885-94d1-a6bdd397a061",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 353
@@ -65,7 +65,7 @@
         "  if i%5 == 0:\n",
         "    print(i)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "MyauPmeB51Mg",
         "colab_type": "code",
-        "outputId": "2e66a116-acb5-4fea-d9ba-dd120e7f0030",
+        "outputId": "51a28f83-0b81-489b-fc5d-a037924c3d84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
@@ -121,7 +121,7 @@
         "for i,e in enumerate(a):\n",
         "  print(\"index {} and element {}\".format(i,e))  "
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "j2KG4tf48wUJ",
         "colab_type": "code",
-        "outputId": "6dead335-881f-4457-8dca-4c5a6a679929",
+        "outputId": "4936ab95-2596-431c-d854-1089d555fa65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
@@ -154,7 +154,7 @@
       "source": [
         "ls -ltr sample_data/"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,10 +162,10 @@
             "total 55504\n",
             "-rwxr-xr-x 1 root root      930 Jan  1  2000 \u001b[0m\u001b[01;32mREADME.md\u001b[0m*\n",
             "-rwxr-xr-x 1 root root     1697 Jan  1  2000 \u001b[01;32manscombe.json\u001b[0m*\n",
-            "-rw-r--r-- 1 root root 36523880 May  4 16:26 mnist_train_small.csv\n",
-            "-rw-r--r-- 1 root root 18289443 May  4 16:26 mnist_test.csv\n",
-            "-rw-r--r-- 1 root root  1706430 May  4 16:26 california_housing_train.csv\n",
-            "-rw-r--r-- 1 root root   301141 May  4 16:26 california_housing_test.csv\n"
+            "-rw-r--r-- 1 root root  1706430 May 13 16:29 california_housing_train.csv\n",
+            "-rw-r--r-- 1 root root   301141 May 13 16:29 california_housing_test.csv\n",
+            "-rw-r--r-- 1 root root 36523880 May 13 16:29 mnist_train_small.csv\n",
+            "-rw-r--r-- 1 root root 18289443 May 13 16:29 mnist_test.csv\n"
           ],
           "name": "stdout"
         }
@@ -176,18 +176,18 @@
       "metadata": {
         "id": "6kM2IP80lVKV",
         "colab_type": "code",
+        "outputId": "6adf7578-6468-4a3e-da0b-c1b6481723e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "08ac606a-4189-441d-eb4a-e94ba10a10dd"
+        }
       },
       "source": [
         "from __future__ import print_function\n",
         "import pandas as pd\n",
         "pd.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +199,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 10
         }
       ]
     },
@@ -208,19 +208,19 @@
       "metadata": {
         "id": "SK3acvbOm6O9",
         "colab_type": "code",
+        "outputId": "d98ab25f-5493-4454-a4ad-bd777f49d737",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "e124ac4f-e733-4d44-9996-c5caa6ceec8d"
+        }
       },
       "source": [
         "cityNames = pd.Series([\"hyd\", \"bang\", \"Chen\"])\n",
-        "population = pd.Series([\"1.5M\", \"2.5M\", \"1.2M\"])\n",
+        "population = pd.Series([1500000, 2500000, 1200000])\n",
         "\n",
         "pd.DataFrame({\"CityName\" : cityNames, \"Population\" : population})"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,33 +252,33 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>hyd</td>\n",
-              "      <td>1.5M</td>\n",
+              "      <td>1500000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>bang</td>\n",
-              "      <td>2.5M</td>\n",
+              "      <td>2500000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>Chen</td>\n",
-              "      <td>1.2M</td>\n",
+              "      <td>1200000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  CityName Population\n",
-              "0      hyd       1.5M\n",
-              "1     bang       2.5M\n",
-              "2     Chen       1.2M"
+              "  CityName  Population\n",
+              "0      hyd     1500000\n",
+              "1     bang     2500000\n",
+              "2     Chen     1200000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -287,17 +287,17 @@
       "metadata": {
         "id": "25nwJcFloFRa",
         "colab_type": "code",
+        "outputId": "8bae9f58-312a-4052-bad0-96c685cfe465",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
-        },
-        "outputId": "0ea9695e-c634-462e-eef5-7482770a1a00"
+        }
       },
       "source": [
         "california_housing_info = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\", sep=\",\")\n",
         "california_housing_info.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -459,16 +459,16 @@
       "metadata": {
         "id": "Gl7xQIqJtmai",
         "colab_type": "code",
+        "outputId": "9427b8e7-b6f8-4a1c-e8aa-90c40ba63d43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
-        },
-        "outputId": "46ce68db-b4e8-4320-f0ff-b6bcaf48e30f"
+        }
       },
       "source": [
         "california_housing_info.head(3)"
       ],
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 13
         }
       ]
     },
@@ -565,16 +565,16 @@
       "metadata": {
         "id": "8276Srs6t18G",
         "colab_type": "code",
+        "outputId": "4d4c4605-12d1-42e2-cbfa-efd256cc878e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
-        },
-        "outputId": "10d6cfd8-01e1-4b9e-b3e8-bcf5b9e2cd0b"
+        }
       },
       "source": [
         "california_housing_info.tail(3)"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +662,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 14
         }
       ]
     },
@@ -681,11 +681,11 @@
       "metadata": {
         "id": "6CNeNJiPv78T",
         "colab_type": "code",
+        "outputId": "333fc62e-5de8-4b95-ce6a-0b58b152d85b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        },
-        "outputId": "53d9f956-b307-4158-dca7-c936ffcab81c"
+        }
       },
       "source": [
         "cities = pd.DataFrame({\"CityName\" : cityNames, \"Population\" : population})\n",
@@ -702,12 +702,160 @@
             "1    bang\n",
             "2    Chen\n",
             "Name: CityName, dtype: object\n",
-            "1.5M\n",
+            "1500000\n",
             "<class 'pandas.core.series.Series'>\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W-DbdrNkluIB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "cb36eaf7-59e0-46b0-c405-9aa3508f6639"
+      },
+      "source": [
+        "population/10000"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    150.0\n",
+              "1    250.0\n",
+              "2    120.0\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PG1DBMybnZDz",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Importing Numpy**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xkGrFsQlnh-1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "b86bdda2-b799-4786-f827-45bf930ac732"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "import numpy as np\n",
+        "np.log(population)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    14.220976\n",
+              "1    14.731801\n",
+              "2    13.997832\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HtoZXeuu7RxF",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Logarithm** : is an innverse function of exponentiation\n",
+        "\n",
+        "**numpy logarithm and exponential function**, by default it uses base e = 2.718281828459"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W7piaJulqXB3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "66a5a12d-cdaf-479d-f6a7-ade815fe68a8"
+      },
+      "source": [
+        "print(np.log(10))\n",
+        "print(np.log(100))\n",
+        "print(np.log(10000))\n",
+        "np.exp(2.3025850)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.302585092994046\n",
+            "4.605170185988092\n",
+            "9.210340371976184\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9.999999070059587"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jDhHebqF5M3S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "print(math.log(100, 10))"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
