--- a/first_model_tensorflow.ipynb
+++ b/first_model_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "first-model-tensorflow.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAwbP1gs/hMyMS8QeJoFIM",
+      "authorship_tag": "ABX9TyM6/uOErhJ1ufZAmoJWdyPK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,10 +128,69 @@
         "colab": {}
       },
       "source": [
-        "xval = np.array([-1.0, 0.0, 1.0, 2.0, 3.0, 4.0]), "
+        "xval = np.array([-1.0, 0.0, 1.0, 2.0, 3.0, 4.0], dtype=float)\n",
+        "yval = np.array([-2.0, 1.0, 4.0, 7.0, 10.0, 13.0], dtype=float) "
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VvDJR3KLC4NM",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Training the neural network**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s0DEy0KqEvl1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.fit(xval, yval, epochs=500)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3JPAg-FBFLH0",
+        "colab_type": "text"
+      },
+      "source": [
+        "**use the model to predict the known values**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "20zphxtiF5lm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9c26c7cc-288c-4cd1-e241-943b1cf9ccf2"
+      },
+      "source": [
+        "print(model.predict([10]))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[30.999973]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
